--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,12 +2,15 @@
 
 <p>NOMBRE</p>
 <input type="text" [(ngModel)]="user.nombre">
+<br>
+<p>USUARIO: admin</p>
 
 <br>
 
 <p>CLAVE</p>
 <input type="text" [(ngModel)]="user.clave">
-
+<br>
+<p>CLAVE: admin</p>
 <br>
 <br>
 
@@ -15,4 +18,4 @@
 
 <br>
 <br>
-<p> Logeado??: {{mostrarLogin}} </p>
+<a routerLink='/'>Volver</a>
